2005-04-07 Mikhail Khodjaiants
	Removed unused icons.
	- icons/full/clcl16/auto_solib_co.gif
	- icons/full/dlcl16/auto_solib_co.gif
	- icons/full/elcl16/auto_solib_co.gif

2005-03-09 Mikhail Khodjaiants
	Fix for bug 87546: Obsolete debug MI settings in Preference need to be removed.
	* MIPreferencePage.java
	* PreferenceMessages.properties
	* OptionsPropertyPage.java
	* PropertyMessages.properties

2005-03-03 Mikhail Khodjaiants
	Conflicting methods.
	* SolibSearchPathBlock.java

2005-01-11 Mikhail Khodjaiants
	Replaced deprecated methods and constants.
	* MIPreferencePage.java

2005-01-11 Mikhail Khodjaiants
	Replaced deprecated methods and constants.
	* ListDialogField.java
	* SelectionButtonDialogField.java
	* StringButtonDialogField.java

2004-11-11 Mikhail Khodjaiants
	Fix for bug 75627: Incorrect limit to port numbers.
	* TCPSettingsBlock.java

2004-11-08 Mikhail Khodjaiants
	Added the "Automatically refresh registers" and "Automatically refresh shared libraries"
	preferences and properties.
	* ActionFilterAdapterFactory.java: new
	* GDBTargetActionFilter.java: new
	* PreferenceMessages.properties
	* MIPreferencePage.java
	* org.eclipse.cdt.debug.mi.internal.ui.propertypages: new package
	* PropertyMessages.properties
	* OptionsPropertyPage.java
	* PropertyMessages.java
	* plugin.properties
	* plugin.xml

2004-10-29 Alain Magloire
	Changes to the CDI interface
	* SeAutoSolibActionDelegate.java

2004-08-23 Mikhail Khodjaiants
	Added API to allow the access to the internal MI UI components by client plugins.
	Changed the "Solib search path" component.
	Reformatting and cleanup.
	* MIUIMessages.properties
	* CygwinDebuggerPage.java
	* GDBDebuggerPage.java
	* GDBServerDebuggerPage.java
	* GDBSolibBlock.java
	* IMIHelpContextIds.java
	* IMILaunchConfigurationComponent.java: new
	* IMIUIConstants.java
	* IPathProvider.java: new
	* MIUIUtils.java: new
	* PixelConverter.java
	* SerialPortSettingsBlock.java
	* SolibSearchPathBlock.java
	* TCPSettingsBlock.java